test/bad/generics/def09.px

func f<A>(x: A, y: A = default(A)): Void def
    print x

print f(1)
